@@ -1,0 +1,2 @@
+prog: ../../tests/true
+vgopts: -q --num-callers=1
